--- a/ui.html
+++ b/ui.html
@@ -16,9 +16,8 @@
 
   #description,
   #description>p {
-    font-size: 15px;
+    font-size: 14px;
     line-height: 140%;
-    letter-spacing: 0.05rem;
     margin: 0;
     font-weight: 300;
   }
@@ -36,47 +35,19 @@
   #names-container {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    padding: 0.75rem;
     background-color: var(--figma-color-bg-secondary);
-    gap: 1rem;
+    gap: 0.5rem;
     border-radius: 1rem;
   }
 
   #names-wrapper {
     display: flex;
     align-items: flex-end;
-    gap: 1rem;
-    height: fit-content;
-  }
-
-  #names {
-    display: flex;
-    align-content: flex-start;
-    flex-wrap: wrap;
     gap: 0.5rem;
-  }
-
-  .frame-name {
-    padding: .5rem;
-    background-color: var(--figma-color-bg-tertiary);
-    font-size: 0.9rem;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-basis: auto;
-    width: fit-content;
+    height: fit-content;
+    font-size: 13px;
     letter-spacing: 0.05rem;
-  }
-
-  #clear-names {
-    font-size: 0.9rem;
-    width: fit-content;
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-    color: var(--figma-color-text-danger);
-    background-color: var(--figma-color-bg-secondary);
-    border: 2px solid var(--figma-color-border-danger);
   }
 
   #input-wrapper {
@@ -90,7 +61,7 @@
     padding: 8px;
     border: 2px solid var(--figma-color-border-brand);
     border-radius: 4px;
-    font-size: 1rem;
+    font-size: 14px !important;
     width: 100%;
   }
 
@@ -101,7 +72,8 @@
 
   .input-label {
     margin: 0;
-    font-size: 14px;
+    font-size: 12px;
+    letter-spacing: 0.75px;
     color: var(--figma-color-text-secondary);
     font-weight: 300;
   }
@@ -110,6 +82,34 @@
     display: flex;
     flex-direction: row;
     gap: 0.75rem;
+  }
+
+  #names {
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+
+  .frame-name {
+    padding: .5rem;
+    background-color: var(--figma-color-bg-tertiary);
+    border-radius: 0.5rem;
+    display: flex;
+    flex-basis: auto;
+    width: fit-content;
+  }
+
+  #clear-names {
+    font-size: 14px;
+    width: fit-content;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+    color: var(--figma-color-text-danger);
+    background-color: var(--figma-color-bg-secondary);
+    border: 2px solid var(--figma-color-border-danger);
   }
 
   .button-section {
@@ -121,13 +121,14 @@
 
   .button-wrapper {
     display: flex;
-    /* flex-direction: row; */
-    flex-direction: column;
+    flex-direction: row;
+    /* flex-direction: column; */
     gap: 1rem;
     width: 100%;
   }
 
   button {
+    font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
@@ -141,7 +142,7 @@
     flex-direction: row;
     gap: 0.5rem;
   }
-  
+
   button:hover {
     outline: 2px solid var(--figma-color-border-brand-strong);
   }
@@ -168,6 +169,7 @@
   }
 
   .checkbox-wrapper {
+    font-size: 14px;
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
@@ -245,8 +247,8 @@
     <label for="append">Append (instead of replace)</label>
   </div>
   <div class="button-wrapper">
-    <button id="renumber" class="primary-button">Renumber</button>
     <button id="cancel" class="cancel-button">Cancel</button>
+    <button id="renumber" class="primary-button">Renumber</button>
   </div>
 </div>
 
